buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.guardsquare:proguard-gradle:7.6.1'
    }
}

plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
}

project.ext.lwjglVersion = "3.3.3"
version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://api.modrinth.com/maven' }
    maven { url 'https://maven.lenni0451.net/everything' }
    maven { url 'https://repo.viaversion.com/' }
    maven { url 'https://repo.opencollab.dev/maven-snapshots/' }
    maven { url 'https://maven.terraformersmc.com/' }
    maven { url 'https://maven.florianreuth.de/snapshots' }
}

configurations {
    proguard
}

loom {
    accessWidenerPath = file('src/main/resources/soar.accesswidener')

    runs {
        configureEach {
            vmArgs '--enable-native-access=ALL-UNNAMED'
        }
    }
}

sourceSets {
    main {
        java {
            exclude 'com/soarclient/libraries/browser/**'
            exclude 'com/soarclient/management/mod/impl/hud/WebBrowserMod.java'
        }
        resources {
            exclude 'assets/soar/shaders/**'
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    implementation 'org.apache.commons:commons-math3:3.6.1'

    modImplementation "com.viaversion:viafabricplus-api:${project.viafabricplus_version}"
    modImplementation "com.viaversion:viafabricplus:${project.viafabricplus_version}"
    include "com.viaversion:viafabricplus:${project.viafabricplus_version}"

    def bundled = [
        'com.github.ben-manes.caffeine:caffeine:3.2.3',
        'io.github.humbleui:types:0.2.0',
        "io.github.humbleui:skija-shared:${project.skija_version}",
        "io.github.humbleui:skija-windows-x64:${project.skija_version}",
        "io.github.humbleui:skija-linux-x64:${project.skija_version}",
        "io.github.humbleui:skija-macos-x64:${project.skija_version}",
        "io.github.humbleui:skija-macos-arm64:${project.skija_version}",
        'com.mpatric:mp3agic:0.9.1',
        'javazoom:jlayer:1.0.1',
        'com.googlecode.soundlibs:mp3spi:1.9.5.4',
        'org:jaudiotagger:2.0.3',
        'com.googlecode.soundlibs:jlayer:1.0.1.4',
        'com.kohlschutter.junixsocket:junixsocket-common:2.10.1',
        'org.java-websocket:Java-WebSocket:1.6.0',
        'net.lenni0451:MCPing:1.4.4',
        'net.lenni0451:Reflect:1.6.2'
    ]

    bundled.each { dep ->
        implementation dep
        include dep
    }

    proguard 'com.guardsquare:proguard-base:7.6.1'

    def lwjglNfdDeps = [
        "org.lwjgl:lwjgl-nfd:$lwjglVersion",
        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-linux",
        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-linux-arm64",
        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-macos",
        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-macos-arm64",
        "org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-windows"
    ]

    lwjglNfdDeps.each { dep ->
        implementation dep
        include dep
    }
}

processResources {
    inputs.property 'version', project.version

    filesMatching('fabric.mod.json') {
        expand 'version': project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

/*
task proguard(type: proguard.gradle.ProGuardTask) {
    dependsOn jar
    injars jar.archiveFile
    outjars "build/libs/${project.archives_base_name}-${version}-proguarded.jar"

    fileTree("${System.properties['java.home']}\\jmods\\") {
        forEach() {
            libraryjars "${it.path}"
        }
    }

    libraryjars configurations.compileClasspath

    dontwarn '**'

    keepattributes 'Signature,*Annotation*,Exceptions'

    keep 'class com.soarclient.mixin.mixins** { *; }'
    keeppackagenames 'com.soarclient.mixin.mixins**'

    renamesourcefileattribute 'SourceFile'
    repackageclasses ''

    useuniqueclassmembernames
    dontusemixedcaseclassnames
    dontoptimize
    dontshrink
}
*/
